# platform.core.multimedia.libmm-sound

./: @  AUTHORS  Makefile.am  Makefile.in  aclocal.m4  config.hin  configure  configure.ac  dump_audio.sh  libmm-sound-tool.manifest  libmm-sound.manifest  mm_sound.c  mm_sound_bootsound.c  mm_sound_client.c  mm_sound_client_dbus.c  mm_sound_client_msgq.c  mm_sound_device.c  mm_sound_focus.c  mm_sound_keysound.c  mm_sound_pa_client.c  mm_sound_pcm.c  mm_sound_pcm_async.c  mm_sound_proxy.c  project.config
TC/: tet_scen
TC/utc/: Makefile  tet_captured  tslist  utc_mm_sound_common.h  utc_mm_sound_pcm_capture_close_func.c  utc_mm_sound_pcm_capture_open_func.c  utc_mm_sound_pcm_capture_read_func.c  utc_mm_sound_pcm_play_close_func.c  utc_mm_sound_pcm_play_open_func.c  utc_mm_sound_pcm_play_write_func.c  utc_mm_sound_play_dtmf_func.c  utc_mm_sound_play_keysound_func.c  utc_mm_sound_play_sound_func.c  utc_mm_sound_play_tone_func.c  utc_mm_sound_stop_sound_func.c  utc_mm_sound_volume_add_callback_func.c  utc_mm_sound_volume_get_current_playing_type_func.c  utc_mm_sound_volume_get_step_func.c  utc_mm_sound_volume_get_value_func.c  utc_mm_sound_volume_primary_type_clear_func.c  utc_mm_sound_volume_primary_type_set_func.c  utc_mm_sound_volume_remove_callback_func.c  utc_mm_sound_volume_set_value_func.c
common/: .clang-format  Makefile.am  Makefile.in  mm_ipc.c  mm_sound_connection.c  mm_sound_connector.c  mm_sound_dbus.c  mm_sound_socket.c  mm_sound_utils.c  mm_source.c
debian/: changelog  control  copyright  libmm-sound-0.install.in  libmm-sound-0.postinst  libmm-sound-0.preinst  libmm-sound-dev.install.in  libmm-sound-sdk-dev.install.in  libmm-sound-tool.install.in  rules
focus_server/: Makefile.am  mm_sound_focus_server.c  mm_sound_focus_thread_pool.c  mm_sound_mgr_focus.c  mm_sound_mgr_focus_connector.c  mm_sound_mgr_focus_dbus.c  mm_sound_mgr_focus_ipc.c  mm_sound_mgr_focus_socket.c
focus_server/include/: mm_sound_focus_thread_pool.h  mm_sound_mgr_focus.h  mm_sound_mgr_focus_connector.h  mm_sound_mgr_focus_dbus.h  mm_sound_mgr_focus_ipc.h  mm_sound_mgr_focus_socket.h
include/: mm_ipc.h  mm_sound.h  mm_sound_client.h  mm_sound_client_dbus.h  mm_sound_client_msgq.h  mm_sound_common.h  mm_sound_connection.h  mm_sound_connector.h  mm_sound_dbus.h  mm_sound_dbus_intf.h  mm_sound_device.h  mm_sound_focus.h  mm_sound_intf.h  mm_sound_msg.h  mm_sound_pa_client.h  mm_sound_pcm_async.h  mm_sound_private.h  mm_sound_proxy.h  mm_sound_socket.h  mm_sound_stream.h  mm_sound_utils.h  mm_source.h
init/: Makefile.am  Makefile.in  mmfwaudio  soundserver
packaging/: focus-server-tv.service  focus-server.conf  focus-server.service  libmm-sound.changes  libmm-sound.spec  org.tizen.SoundServer.service  sound-server-tv.service  sound-server.conf  sound-server.path  sound-server.service
pkgconfig/: Makefile.am  Makefile.in  mm-bootsound.pc.in  mm-keysound.pc.in  mm-sound.pc.in
pkgconfig-sdk/: Makefile.am  Makefile.in  mm-keysound.pc.in
server/: Makefile.am  Makefile.in  mm_sound_hal.c  mm_sound_mgr_asm.c  mm_sound_mgr_codec.c  mm_sound_mgr_device.c  mm_sound_mgr_device_dock.c  mm_sound_mgr_device_hdmi.c  mm_sound_mgr_device_headset.c  mm_sound_mgr_device_wfd.c  mm_sound_mgr_dock.c  mm_sound_mgr_focus.c  mm_sound_mgr_focus_dbus.c  mm_sound_mgr_focus_ipc.c  mm_sound_mgr_hdmi.c  mm_sound_mgr_headset.c  mm_sound_mgr_ipc.c  mm_sound_mgr_ipc_dbus.c  mm_sound_mgr_pulse.c  mm_sound_mgr_run.c  mm_sound_mgr_session.c  mm_sound_mgr_wfd.c  mm_sound_plugin.c  mm_sound_recovery.c  mm_sound_server.c  mm_sound_thread_pool.c
server/include/: asm-log.h  mm_sound_hal.h  mm_sound_mgr_asm.h  mm_sound_mgr_codec.h  mm_sound_mgr_common.h  mm_sound_mgr_device.h  mm_sound_mgr_device_dock.h  mm_sound_mgr_device_hdmi.h  mm_sound_mgr_device_headset.h  mm_sound_mgr_device_wfd.h  mm_sound_mgr_dock.h  mm_sound_mgr_focus.h  mm_sound_mgr_focus_ipc.h  mm_sound_mgr_hdmi.h  mm_sound_mgr_headset.h  mm_sound_mgr_ipc.h  mm_sound_mgr_ipc_dbus.h  mm_sound_mgr_ipc_msgq.h  mm_sound_mgr_pulse.h  mm_sound_mgr_run.h  mm_sound_mgr_session.h  mm_sound_plugin.h  mm_sound_plugin_codec.h  mm_sound_plugin_hal.h  mm_sound_plugin_run.h  mm_sound_recovery.h  mm_sound_thread_pool.h
server/plugin/: Makefile.am  Makefile.in
server/plugin/dtmf/: Makefile.am  dtmf_all.raw  mm_sound_plugin_codec_dtmf.c
server/plugin/headset/: Makefile.am  Makefile.in  mm_sound_plugin_run_headset.c
server/plugin/keytone/: Makefile.am  Makefile.in  mm_sound_plugin_run_key_tone.c
server/plugin/ogg/: Makefile.am  mm_sound_plugin_codec_ogg.c
server/plugin/tone/: Makefile.am  mm_sound_plugin_codec_tone.c
server/plugin/wav/: Makefile.am  Makefile.in  mm_sound_plugin_codec_wave.c
testsuite/: Makefile.am  Makefile.in  mm_sound_testsuite_simple.c
